# LocalLLM

./: .env.example  .gitignore  AGENT_HANDOFF.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  hf_token.txt  plan.md  pyproject.toml  showcase-plan.md
.claude/: launch.json
apps/: __init__.py  agent_cli.py  cli_chat.py  live_bench.py  ocr_bot.py  serve.py  streamlit_chat.py  streamlit_launcher.py  streamlit_translate.py  stt_batch.py  translate_streamlit.py  translate_streamlit_launcher.py  webui.py
config/: default.yaml
docs/: INTEGRATION_PLAN.md  RUNNING.md
localllm/: __init__.py  config.py  secrets.py
scripts/: build_showcase.py  cleanup_gpu.ps1  cleanup_gpu.sh  download_model.py  start_translation_stack.ps1  start_translation_stack.sh  stop_stale_ports.ps1  stop_stale_ports.sh
showcase/: COMPARISON.md  README.md  app.py  dev_app.py  endpointer.py  fake_models.py  interpreter.py  llama_models.py  models.py  piper_voices.py  prompts.py  requirements.txt  zerogpu.py
terminals/: 1.txt
tests/: test_agent_tool_security.py  test_agent_tools.py  test_attachments.py  test_audio_chunker.py  test_client_config.py  test_gateway_app.py  test_gateway_guardrails.py  test_hardening_defaults.py  test_internet_tools.py  test_live_endpointer.py  test_live_pipeline.py  test_live_ws.py  test_media_convert.py  test_message_order.py  test_quantization.py  test_research_tools.py  test_secrets.py  test_sentence_queue_concat.py  test_service_preflight.py  test_showcase.py  test_skills_discovery.py  test_staging_cleanup.py  test_streamlit_pdf.py  test_tts.py  (+6 more)
(+87 files in other folders)
